--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<html>
+<body>
+
+
 <h1>Hello! I'm Manish! Welcome</h1>
 
-<input name="Enter Grid Size" />
+<input name="Enter Grid Size" id="size" />
+
+<script>
+    var size = document.getElementById("size").value;
+    console.log(size);
+</script>
+
+
+
+
+</body>
+</html>
